# AI_Projects

./: .gitignore
Rise/: .gitignore  .tmp_queue_inspect.py  AGENTS.md  VAR_OUT  app.py  docker-compose.yml  pyproject.toml  sitecustomize.py  temp.ps1  tmp_print_env.py
Rise/AI_WorkSpace/: PROJECT_STRUCTURE.md  State.json  api_index.md  classes_index.md  config_index.md  events_index.md  functions_index.md  index.yaml  schemas_index.md  storage_index.md  tests_index.md
Rise/AI_WorkSpace/Index/: index.py  state.py
Rise/AI_WorkSpace/Reports/: session_00001_compliance-audit_issues.json  session_00002_bloat-scan_issues.json
Rise/AI_WorkSpace/Requirements/: session_00001_compliance-audit.md  session_00002_bloat-scan.md  session_20251112_0014_violation_alignment.md
Rise/AI_WorkSpace/Tasks/: session_00001_compliance-audit_min_steps.md  session_00002_bloat-scan_min_steps.md  (+1 more)
Rise/KnowledgeBase/: KnowledgeBase_Directionary.yaml  KnowledgeBase_index.yaml
Rise/config/: runtime_policy.json
Rise/dev/: pipeline_api_server.py
Rise/docs/: entrypoints.md  pipeline-node-api.md
Rise/one_off/: __init__.py  __main__.py
Rise/openai_agents/: __init__.py
Rise/openspec/: .AGENTS.md  AGENTS.md  PROJECT_STRUCTURE.md  project.md
Rise/python_multipart/: __init__.py
Rise/scripts/: refresh_binding.py  rehydrate_workflow_history.py  rotate_telemetry.sh
Rise/tests/: conftest.py
Rise/tools/: channel_binding_admin.py  check_one_off_deps.py  check_project_utility_deps.py  docker_db_check.py  persist_worker.py  rabbit_rehydrator.py  stream_mirror_worker.py  telegram_probe.py
(+1858 files in other folders)
