[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rise-project-utility"
version = "0.0.0"
description = "Shared project utility layer for Rise services"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["project_utility*", "one_off*", "foundational_service*", "interface_entry*"]
